--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kasper | Template Two</title>
     <!-- Render All Elements Normally -->
-    <link rel="stylesheet" href="/css/normalize.css"/>
+    <link rel="stylesheet" href="/css/normalize.css" />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="/css/all.min.css"/>
+    <link rel="stylesheet" href="/css/all.min.css" />
     <!-- Main Template CSS File -->
-    <link rel="stylesheet" href="/css/kasper.css"/>
+    <link rel="stylesheet" href="/css/kasper.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
@@ -20,7 +20,7 @@
     <header>
       <div class="container">
         <a href="#" class="logo">
-          <img src="/images/logo.png" alt="Logo" />
+          <img src="images/logo.png" alt="Logo" />
         </a>
         <nav>
           <i class="fas fa-bars toggle-menu"></i>
@@ -122,7 +122,7 @@
     <!-- Start Design -->
     <div class="design">
       <div class="image">
-        <img src="/images/mobile.png" alt="Mobile" />
+        <img src="images/mobile.png" alt="Mobile" />
       </div>
       <div class="text">
         <h2>Our Design Comes With...</h2>
@@ -155,56 +155,56 @@
       </div>
       <div class="imgs-container">
         <div class="box">
-          <img src="/images/shuffle-01.jpg" alt="" />
+          <img src="images/shuffle-01.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/images/shuffle-02.jpg" alt="" />
+          <img src="images/shuffle-02.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/images/shuffle-03.jpg" alt="" />
+          <img src="images/shuffle-03.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/images/shuffle-04.jpg" alt="" />
+          <img src="images/shuffle-04.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/images/shuffle-05.jpg" alt="" />
+          <img src="images/shuffle-05.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/images/shuffle-06.jpg" alt="" />
+          <img src="images/shuffle-06.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/images/shuffle-07.jpg" alt="" />
+          <img src="images/shuffle-07.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
           </div>
         </div>
         <div class="box">
-          <img src="/images/shuffle-08.jpg" alt="" />
+          <img src="images/shuffle-08.jpg" alt="" />
           <div class="caption">
             <h4>Awesome Image</h4>
             <p>Photography</p>
@@ -217,7 +217,7 @@
     <!-- Start Video -->
     <div class="video">
       <video autoplay muted loop>
-        <source src="/images/awesome-video.mp4" type="video/mp4" />
+        <source src="images/awesome-video.mp4" type="video/mp4" />
       </video>
       <div class="text">
         <h2>Super Awesome Video Here</h2>
@@ -236,7 +236,7 @@
             tincidunt.
           </p>
         </div>
-        <img src="/images/about.png" alt="" />
+        <img src="images/about.png" alt="" />
       </div>
     </div>
     <!-- End About -->
@@ -276,7 +276,7 @@
             tincidunt.
           </p>
           <div class="content">
-            <img src="/images/skills-01.jpg" alt="" />
+            <img src="images/skills-01.jpg" alt="" />
             <div class="text">
               Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
               tincidunt.
@@ -284,7 +284,7 @@
             </div>
           </div>
           <div class="content">
-            <img src="/images/skills-02.jpg" alt="" />
+            <img src="images/skills-02.jpg" alt="" />
             <div class="text">
               Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget
               tincidunt.
@@ -461,7 +461,7 @@
     <!-- Start Footer -->
     <div class="footer">
       <div class="container">
-        <img src="/images/logo.png" alt="Logo" />
+        <img src="images/logo.png" alt="Logo" />
         <p>We Are Social</p>
         <div class="social-icons">
           <i class="fab fa-facebook-f"></i>
