--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kasper | Template Two</title>
     <!-- Render All Elements Normally -->
-    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="./css/normalize.css"  type="text/css" />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="./css/all.min.css" type="text/css" />
     <!-- Main Template CSS File -->
-    <link rel="stylesheet" href="css/kasper.css" />
+    <link rel="stylesheet" href="./css/kasper.css" type="text/css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" />
